# aiagents-lab

./: README.md  pyproject.toml
agent-forensic-doctor/: .env.example  .gitignore  requirements.txt
app/: app.py
cases/: README.md
qdrant/: README.md
sales-assistant/: .gitignore  Dockerfile  README.md  pyproject.toml
sales-assistant/docker/: .env.example  docker-compose.yml
sales-assistant/kestra/: catalog-sync.yaml  conversation-summary.yaml  follow-up-24h.yaml  follow-up-72h.yaml  follow-up-7d.yaml
sales-assistant/mock/: catalog.json
sales-assistant/scripts/: embed_catalog.py
sales-assistant/src/: config.py  main.py
sales-assistant/src/api/: internal.py  webhook.py
sales-assistant/src/db/: postgres.py  redis.py
sales-assistant/src/db/migrations/: 000_create_evolution_db.sh  001_initial.sql
sales-assistant/src/graph/: builder.py  state.py
sales-assistant/src/graph/nodes/: classifier.py  conversion.py  discovery.py  escalation.py  objection.py  recommendation.py  support.py
sales-assistant/src/models/: conversation_summary.py  lead.py  product.py
sales-assistant/src/prompts/: base.py  classifier.py  conversion.py  discovery.py  objection.py  recommendation.py  support.py
sales-assistant/src/services/: catalog.py  kestra.py  memory.py  nuvemshop.py  whatsapp.py  whisper.py
sales-assistant/src/utils/: scoring.py  signals.py
sales-assistant/tests/: conftest.py
sales-assistant/tests/integration/: test_catalog.py  test_webhook.py
sales-assistant/tests/unit/: test_classifier.py  test_discovery.py  test_objection.py  test_recommendation.py
(+10 files in other folders)
