[tool.poetry]
name = "wpp-ai-sales-agent"
version = "0.1.0"
description = "WhatsApp AI Sales Agent powered by LangGraph"
authors = ["Lorenzo Uriel <lorenzouriel394@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115"
uvicorn = { extras = ["standard"], version = ">=0.34" }
langgraph = ">=0.3"
langgraph-checkpoint-postgres = ">=2.0"
langchain-openai = ">=0.3"
langchain-core = ">=0.3"
openai = ">=1.60"
sqlalchemy = { extras = ["asyncio"], version = ">=2.0" }
asyncpg = ">=0.30"
pgvector = ">=0.3"
redis = { extras = ["asyncio"], version = ">=5.0" }
httpx = ">=0.28"
pydantic-settings = ">=2.7"
structlog = ">=25.0"
psycopg = { extras = ["binary", "pool"], version = ">=3.2" }
python-multipart = ">=0.0.18"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.25"
respx = ">=0.22"
ruff = ">=0.8"
mypy = ">=1.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
